# sidus-task

./: .gitignore  Dockerfile-backend  Dockerfile-celery  README.md  alpha.env  docker-compose.yaml  pyproject.toml
app/: conftest.py  main.py
app/admin/: api.py
app/admin/users/: api.py
app/auth/: api.py  dependencies.py
app/caching/: core.py
app/core/: config.py  db.py  decorators.py  security.py  validators.py
app/router/api_v1/: endpoints.py
app/routines/: app.py
app/users/: api.py  crud.py  models.py  tasks.py  types.py
app/users/tests/: tests.py
app/users/tests/data/: data.json
deployment/database/: create_db.sql
migrations/: env.py
migrations/versions/: 0001_b44fc996405a_usr_create_user.py
